test/data/resolver/valid/parameter_across_union_same_name.cypher
MATCH (a:Person) RETURN a.id AS x UNION MATCH (a:Post) WHERE a.title = $p RETURN a.id AS x
