test/data/resolver/invalid/unknown_property_union_sibling_branch.cypher
MATCH (a:Post) WHERE a.age > $p RETURN a.id AS x UNION MATCH (a:Person) RETURN a.id AS x
